updated html file

--- a/first_day.html
+++ b/first_day.html
@@ -10,5 +10,18 @@
     <br><br>
         <img src="girl_horse.png" alt="Girl riding a horse" width="500">
     <br><br>
-        <a href="https://en.wikipedia.org/wiki/Red_Dead_Redemption" target="_blank">Click Here!</a>
+        <a href="https://en.wikipedia.org/wiki/Red_Dead_Redemption" target="_blank">Click Here New Tab!</a>
+    <br>
+        <a href="https://en.wikipedia.org/wiki/Western_(genre)"><b>Click Here BOLD!</b></a>
+    <br>
+        <a href="">Click Here NOTHING!</a>
+    <br>
+        <ol>
+            <li>Take 2 slices of bread</li>
+            <li>Spread mayo on bread</li>
+            <li>Add desired protein</li>
+            <li>Add desired veggies</li>
+            <li>Put the 2 slices of bread together</li>
+            <li>Eat Sandwich</li>
+        </ol>
 </html>
